--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -321,23 +321,7 @@ h1 {
 }
 
 /* Circular Team Letter */
-.team-label {
-  position: absolute;
-  top: -0.8rem;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #007bff;
-  color: white;
-  font-weight: bold;
-  font-size: 0.85rem;
-  border-radius: 50%;
-  width: 1.6rem;
-  height: 1.6rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 0 4px rgba(0,0,0,0.3);
-}
+
 
 /* Selected highlight */
 .selected-team {
@@ -346,7 +330,7 @@ h1 {
 }
 
 /* Optional: subtle handle bar at top */
-.team::before {
+.team2::before {
   content: "";
   position: absolute;
   top: 0;
