--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -650,6 +650,65 @@ button:disabled {
   box-shadow: 0 0 10px #ffcc00;
   transform: scale(1.02);
 }
+
+.team-card {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 1rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  padding: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.team-card:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.35);
+}
+
+.swap-btn {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: linear-gradient(135deg, #ff9900, #ffcc33);
+  border-radius: 50%;
+  padding: 0.4rem;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+  transition: transform 0.2s ease;
+}
+.swap-btn:hover {
+  transform: rotate(90deg) scale(1.1);
+}
+
+.player-btn {
+  background: rgba(255, 255, 255, 0.15);
+  color: #fff;
+  border-radius: 0.6rem;
+  padding: 0.5rem 1.2rem; /* dynamic width */
+  margin: 0.25rem 0;
+  font-size: 0.95rem;
+  text-align: center;
+  transition: background 0.2s ease;
+}
+.player-btn:hover {
+  background: rgba(255, 255, 255, 0.25);
+}
+
+
+  .match-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.75rem;
+  margin: 1rem 0;
+}
+.vs-label {
+  font-weight: bold;
+  color: #fff;
+  opacity: 0.9;
+}
   
 </style>
 
