--- a/BSphonealpha1.html
+++ b/BSphonealpha1.html
@@ -608,6 +608,107 @@ button:disabled {
   color: #fff;
   opacity: 0.9;
 }
+
+.match-card {
+  background: linear-gradient(145deg, #ffffff22, #00000033);
+  border-radius: 1rem;
+  padding: 1rem;
+  margin: 1rem auto;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  max-width: 400px;
+  position: relative;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.match-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+}
+
+.teams {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.team {
+  flex: 1;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 0.8rem;
+  padding: 0.6rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 0.4rem;
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.1);
+  transition: 0.2s ease;
+}
+
+.team:hover {
+  background: rgba(255, 255, 255, 0.15);
+}
+
+/* Player buttons inside team */
+.Lplayer-btn, .Rplayer-btn {
+  width: 100%;
+  text-align: center;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding: 0.45rem 0;
+  cursor: pointer;
+  transition: 0.2s;
+  color: #fff;
+}
+
+.Lplayer-btn {
+  background: #28a745;
+}
+
+.Rplayer-btn {
+  background: #0099cc;
+}
+
+.Lplayer-btn:hover, .Rplayer-btn:hover {
+  opacity: 0.85;
+}
+
+/* VS separator */
+.vs {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+/* Swap icon */
+.swap-icon {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background: #ff9800;
+  color: white;
+  border-radius: 50%;
+  padding: 0.3rem 0.35rem;
+  font-size: 0.9rem;
+  box-shadow: 0 0 8px rgba(0,0,0,0.4);
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.swap-icon:hover {
+  transform: scale(1.15);
+  background: #ffa726;
+}
+
+/* Selected team highlight */
+.selected-team {
+  outline: 2px solid #ffcc00;
+  box-shadow: 0 0 10px #ffcc00;
+  transform: scale(1.02);
+}
   
 </style>
 
