--- a/BSphone.html
+++ b/BSphone.html
@@ -11,205 +11,340 @@
   <title>Badminton Pair-UP</title>
 
 <style>
-    /* =========================================================
-   GLOBAL LAYOUT & THEME
-   ========================================================= */
-:root {
-  --bg-color: #f7f8fa;
-  --text-color: #222;
-  --card-bg: #ffffff;
-  --accent: #009688;
-  --accent-hover: #00796b;
-  --warn: #ffa726;
-  --warn-hover: #ff9800;
-  --border: #ddd;
-  --shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-[data-theme="dark"] {
-  --bg-color: #121212;
-  --text-color: #eee;
-  --card-bg: #1e1e1e;
-  --accent: #26c6da;
-  --accent-hover: #00bcd4;
-  --warn: #ffb74d;
-  --warn-hover: #ffa726;
-  --border: #333;
-  --shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-}
-
 body {
   margin: 0;
-  font-family: "Segoe UI", Arial, sans-serif;
-  background: var(--bg-color);
-  color: var(--text-color);
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #3b0073, #7d00b8);
+  color: white;
   text-align: center;
   overflow-x: hidden;
-  transition: background 0.3s, color 0.3s;
+}
+
+header {
+  padding: 0.5rem;
 }
 
 h1 {
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   margin: 0;
-  font-weight: 600;
-  color: var(--accent);
+  font-weight: bold;
+  letter-spacing: 0.125rem;
 }
 
-/* =========================================================
-   HEADER & CONTAINER
-   ========================================================= */
-.app-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: linear-gradient(135deg, var(--accent), var(--warn));
-  padding: 0.6rem 1rem;
-  color: white;
-  box-shadow: var(--shadow);
+.container {
+  margin: 0.75rem;
+  padding: 0.25rem;
 }
 
-.header-actions button {
-  background: transparent;
-  border: none;
-  font-size: 1.2rem;
-  cursor: pointer;
-  color: white;
-  transition: transform 0.2s;
-}
-.header-actions button:hover {
-  transform: scale(1.1);
-}
-
-.responsive-container {
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-/* =========================================================
-   CARD STYLES
-   ========================================================= */
+/* Cards */
 .card,
 .match-card {
-  background: var(--card-bg);
-  color: var(--text-color);
-  padding: 0.75rem;
-  margin-bottom: 1rem;
+  background: white;
+  color: black;
+  padding: 0.25rem;
+  margin-bottom: 0.5rem;
   border-radius: 0.75rem;
-  box-shadow: var(--shadow);
-  transition: background 0.3s, color 0.3s;
-}
-
-/* =========================================================
-   TABLES & FORMS
-   ========================================================= */
-input,
-select,
-button,
-textarea {
-  font-family: inherit;
-  font-size: 1rem;
-  border-radius: 0.4rem;
-  padding: 0.5rem;
-  border: 1px solid var(--border);
-  width: 100%;
+  box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.3);
+  max-width: 95vw;
   box-sizing: border-box;
 }
 
-button {
-  background: var(--accent);
-  color: white;
-  font-weight: bold;
-  border: none;
-  cursor: pointer;
-  transition: background 0.3s, transform 0.2s;
+/* Match card specifics */
+.match-card {
+  background: linear-gradient(145deg, #ffffff22, #00000033);
+  padding: 1rem;
+  margin: 1rem auto;
+  max-width: 400px;
+  position: relative;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-button:hover {
-  background: var(--accent-hover);
-  transform: scale(1.03);
+.match-card:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
 }
 
-.main-action,
-.main-action2 {
-  display: block;
-  background: var(--warn);
-  color: black;
-  font-weight: 600;
-  border: none;
-  border-radius: 0.75rem;
-  padding: 0.75rem;
-  margin-top: 0.75rem;
+.match-card h3 {
+  font-size: 1.375rem;
+  margin: 0;
+}
+
+.teams {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.team {
+  flex: 1;
+  background: rgba(255, 255, 255, 0.08);
+  border-radius: 0.8rem;
+  padding: 0.6rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  gap: 0.4rem;
+  box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.1);
+  transition: 0.2s ease;
+}
+
+.team:hover {
+  background: rgba(255, 255, 255, 0.15);
+}
+
+.selected-team {
+  outline: 2px solid #ffcc00;
+  box-shadow: 0 0 10px #ffcc00;
+  transform: scale(1.02);
+}
+
+.team.swapping {
+  background: #ffa50066;
+  transform: scale(1.05);
+  transition: transform 0.3s ease, background 0.3s ease;
+}
+
+/* Player buttons */
+.Lplayer-btn, .Rplayer-btn {
   width: 100%;
+  text-align: center;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  padding: 0.45rem 0;
+  cursor: pointer;
+  transition: 0.2s;
+  color: #fff;
+}
+
+.Lplayer-btn {
+  background: #28a745;
+}
+
+.Rplayer-btn {
+  background: #0099cc;
+}
+
+.Lplayer-btn:hover, .Rplayer-btn:hover {
+  opacity: 0.85;
+}
+
+/* Rest box */
+.rest-box {
+  background: transparent !important;
+  color: black;
+  padding: 0.5rem;
+  border-radius: 0.375rem;
+  min-height: 5rem;
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 0.5rem;
+  box-sizing: border-box;
+  border: 0.0625rem solid #999;
+}
+
+.rest-box:not(:empty) {
+  display: flex;
+}
+
+.rest-btn {
+  border: none;
+  border-radius: 0.375rem;
+  font-size: 1.125rem;
+  padding: 0.375rem 0.75rem;
+  color: black;
+  text-align: center;
+  transition: transform 0.2s, background 0.2s;
+  margin: 0;
+}
+
+.rest-btn:hover {
+  transform: scale(1.05);
+  opacity: 0.9;
+}
+
+/* Inputs and buttons inside cards */
+.card input,
+.card select,
+.card button {
+  width: 100%;
+  padding: 0.25rem;
+  margin: 0.5rem 0;
+  font-size: 1rem;
+  border-radius: 0.375rem;
+  box-sizing: border-box;
+}
+
+.card input,
+.card select {
+  border: 0.0625rem solid #ccc;
+}
+
+.card button {
+  background: purple;
+  color: white;
+  border: none;
+  font-weight: bold;
   cursor: pointer;
   transition: background 0.3s, transform 0.2s;
 }
 
-.main-action:hover,
-.main-action2:hover {
-  background: var(--warn-hover);
+.card button:hover {
+  background: #5e009c;
   transform: scale(1.05);
 }
 
-/* =========================================================
-   TABLES
-   ========================================================= */
+/* Main actions */
+.main-action,
+.main-action2 {
+  background: orange;
+  color: black;
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 0.5rem;
+  border-radius: 0.9375rem;
+  cursor: pointer;
+  border: none;
+  transition: background 0.3s, transform 0.2s;
+}
+
+.main-action {
+  display: block;
+  width: 100%;
+  margin-top: 0.5rem;
+}
+
+.main-action2 {
+  display: black;
+  width: 90vw;
+  margin: 1.5rem;
+}
+
+.main-action:hover {
+  background: #ffb84d;
+  transform: scale(1.05);
+}
+
+/* Swap icons/buttons */
+.swap-icon,
+.swap-btn {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  border-radius: 50%;
+  padding: 0.3rem 0.4rem;
+  cursor: pointer;
+  transition: 0.2s ease;
+  box-shadow: 0 0 8px rgba(0,0,0,0.4);
+}
+
+.swap-icon {
+  background: #ff9800;
+  color: white;
+  font-size: 0.9rem;
+}
+
+.swap-icon:hover {
+  transform: scale(1.15);
+  background: #ffa726;
+}
+
+.swap-btn {
+  background: linear-gradient(135deg, #ff9900, #ffcc33);
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+}
+
+.swap-btn:hover {
+  transform: rotate(90deg) scale(1.1);
+}
+
+/* Team card */
+.team-card {
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 1rem;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  padding: 0.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.team-card:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 12px rgba(0,0,0,0.35);
+}
+
+/* Tables */
 #player-list-table {
   width: 100%;
   border-collapse: collapse;
+  margin-top: 0.125rem;
 }
 
 #player-list-table th,
 #player-list-table td {
-  border: 1px solid var(--border);
-  padding: 0.5rem;
+  border: 0.0625rem solid #ccc;
+  padding: 0.375rem;
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.875rem;
 }
 
 #player-list-table th {
-  background: #f1f1f1;
-  color: #333;
+  background: #f2f2f2;
 }
 
-/* =========================================================
-   FIXED PAIRS
-   ========================================================= */
-.fixed-pairs-list {
-  margin-top: 0.5rem;
-}
-.fixed-pair-item {
-  background: #eee;
-  color: #333;
-  padding: 0.4rem 0.6rem;
-  border-radius: 0.4rem;
-  margin: 0.3rem 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.delete-btn {
+  background: none;
+  border: none;
+  color: #d11a2a;
+  font-size: 0.5rem;
+  cursor: pointer;
 }
 
-/* =========================================================
-   MODAL STYLES
-   ========================================================= */
+.delete-btn:hover {
+  color: #a00;
+}
+
+/* Modal */
 #importModal {
   display: none;
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.6);
   z-index: 1000;
+  font-size: 1.375rem;
 }
 
 #importModal .modal-content {
-  background: var(--card-bg);
-  color: var(--text-color);
-  width: 90%;
-  max-width: 500px;
-  margin: 100px auto;
-  padding: 1rem;
+  background: white;
+  color: black;
+  max-width: 31.25rem;
+  margin: 6.25rem auto;
+  padding: 1.5rem;
   border-radius: 0.75rem;
-  box-shadow: var(--shadow);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#importModal textarea {
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 1.125rem;
+  padding: 0.625rem 0.75rem;
+  border-radius: 0.5rem;
+  resize: vertical;
+  font-size: 1.25rem;
 }
 
 .modal-buttons {
@@ -218,103 +353,32 @@ button:hover {
   gap: 0.75rem;
 }
 
+.ok-btn,
+.cancel-btn {
+  font-size: 1.125rem;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 0.625rem 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  color: white;
+}
+
 .ok-btn {
-  background: var(--accent);
+  background: #009c3c;
 }
+
 .ok-btn:hover {
-  background: var(--accent-hover);
+  background: #00b84d;
 }
+
 .cancel-btn {
   background: #d11a2a;
 }
+
 .cancel-btn:hover {
   background: #ff3b3b;
 }
-
-/* =========================================================
-   MATCH DISPLAY
-   ========================================================= */
-#game-results {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  padding: 0.5rem;
-}
-
-.match-card {
-  background: var(--card-bg);
-  box-shadow: var(--shadow);
-  border-radius: 0.75rem;
-  padding: 0.75rem;
-  text-align: center;
-}
-
-.teams {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.team {
-  flex: 1;
-  background: #c2dfff;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-  cursor: pointer;
-  transition: transform 0.2s;
-}
-
-.team:hover {
-  transform: scale(1.03);
-}
-
-.selected-team {
-  outline: 2px solid var(--warn);
-  background: var(--warn);
-  color: #000;
-}
-
-/* =========================================================
-   ROUND NAVIGATION
-   ========================================================= */
-.round-navigation {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  background: linear-gradient(135deg, var(--accent), var(--warn));
-  padding: 0.75rem;
-  border-radius: 0.75rem;
-  color: white;
-  margin: 1rem auto;
-  width: fit-content;
-}
-
-.round-navigation button {
-  background: #fff;
-  color: #333;
-  font-weight: 600;
-  border-radius: 0.5rem;
-  padding: 0.5rem 1rem;
-}
-.round-navigation button:hover:enabled {
-  background: var(--accent);
-  color: white;
-}
-
-/* =========================================================
-   ANIMATIONS
-   ========================================================= */
-@keyframes borderPulse {
-  0% { box-shadow: 0 0 0.25rem var(--accent); }
-  50% { box-shadow: 0 0 1rem var(--accent); }
-  100% { box-shadow: 0 0 0.25rem var(--accent); }
-}
-
-
-  
 </style>
 
 </head>
